--- a/media.html
+++ b/media.html
@@ -3,18 +3,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="/media/media.css" />
-  <link rel="icon" href="assets/favicon.ico">
+  <link rel="stylesheet" href="media.css" />
+  <link rel="icon" href="church.ico">
   <title>Медиа</title>
 </head>
 <body>
 
   <header>
     <nav class="topnav">
-      <a class="active" href="/index.html">Главная</a>
-      <a href="/news/news.html">Новости</a>
-      <a href="/media/media.html">Медиа</a>
-      <a href="/about/about.html">О нас</a>
+      <a class="active" href="https://viicing.github.io/DukhovnayaTrapeznaya">Главная</a>
+      <a href="https://viicing.github.io/DukhovnayaTrapeznaya-news">Новости</a>
+      <a href="https://viicing.github.io/DukhovnayaTrapeznaya-media">Медиа</a>
+      <a href="https://viicing.github.io/DukhovnayaTrapeznaya-about">О нас</a>
   
       <h1>Духовная Трапезная</h1>
   
